# carboncycle

./: .gitignore  README.md  carb_cycling.py  main.py  pyproject.toml  requirements.txt  test_carb_cycling.py
.github/workflows/: ci.yml
core/: __init__.py  calculator.py  input_model.py
ui/: __init__.py  i18n.py  main_window.py
