[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carb-cycling-planner"
version = "1.1.0"
description = "碳循环饮食计划生成器"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "zhang" }]
dependencies = [
    "PyQt6>=6.7.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.0.0",
]

[project.scripts]
carb-cycling = "main:main"

[tool.setuptools]
packages = ["core", "ui"]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
